# ymusic_cli

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
src/models/: schemas.hpp
src/ui/: search.hpp
